--- a/_posts/2025-04-28-who-am-i.md
+++ b/_posts/2025-04-28-who-am-i.md
@@ -1,7 +1,6 @@
 ---
-title: who am i?
+title: Who Am I?
 description: A kid wanted to be a scientist, but lost precious things on the road.
-author: EnderJones
 date: 2025-04-08 21:53:00 +0900
 categories: [blogging]
 tags: [others]
