The start of init post

--- a/_posts/2025-04-28-who-am-i.md
+++ b/_posts/2025-04-28-who-am-i.md
@@ -12,3 +12,15 @@ image:
   alt: place I lived for my whole younger years, seven of them.
 ---
 
+> _Qui aimes-tu le mieux, homme enigmatique, dis?_
+
+"Someone left me......"
+
+# A New Start
+
+The memories of past few years reshaped my life and mind. My loved one left me.  
+I handed over most of my life things and heart to her, which means I have nothing left for myself.  
+I have to start a new life, with the begining of my doctoral program, as a researcher,  
+**I, HAVE TO CHART A NEW PATH**.  
+For my family, for the one I still love, for my friends, for junior students I teach, and for myself.  
+This blog is one of my attempts, attempts to live a new life--just working harder, working smarter and chasing the goal harder.  
