--- a/_posts/2025-04-28-who-am-i.md
+++ b/_posts/2025-04-28-who-am-i.md
@@ -8,19 +8,47 @@ pin: true
 math: true
 mermaid: true
 image:
-  path: /assets/img/TitleImgs/DSCF1111.jpg
+  path: /assets/img/whoami/DSCF1111.jpg
   alt: place I lived for my whole younger years, seven of them.
 ---
 
-> _Qui aimes-tu le mieux, homme enigmatique, dis?_
+> _— Qui aimes-tu le mieux, homme énigmatique, dis ?_  
+_— J’aime les nuages… les nuages qui passent… là-bas… là-bas… les merveilleux nuages !_
 
-"Someone left me......"
+## A New Start
 
-# A New Start
+The memories of the past few years have reshaped my life and mind. My loved one left me.  
+I surrendered most of my heart and essence to her, leaving nothing for myself.  
+Yet, I refuse to surrender—not on her, not on my life.  
+With the beginning of my doctoral program as a researcher,  
+**I, MUST CHART A NEW PATH**.  
+For my family, for the one I still love, for my friends, for the students I mentor, and ultimately, for myself.  
+This blog marks one of my attempts to forge a new life—working with greater purpose, thinking with sharper clarity, and pursuing my dreams with unwavering determination.
 
-The memories of past few years reshaped my life and mind. My loved one left me.  
-I handed over most of my life things and heart to her, which means I have nothing left for myself.  
-I have to start a new life, with the begining of my doctoral program, as a researcher,  
-**I, HAVE TO CHART A NEW PATH**.  
-For my family, for the one I still love, for my friends, for junior students I teach, and for myself.  
-This blog is one of my attempts, attempts to live a new life--just working harder, working smarter and chasing the goal harder.  
+## who am I?
+
+### Life
+
+![bar](/assets/img/whoami/bar.png){: width="972" height="589" .w-50 .right}
+
+In my younger years, the world seemed much smaller. I was beaten by my own parents almost every month until halfway through high school. I studied at my old school with consistently poor grades and had a crush on a girl who never even acknowledged me as a normal person. I had very little money for the things I loved... those days were darker than now.  
+Of course, the trouble wasn't purely physical. My father placed me in a class with students far more advanced than I was, telling me, "Study is all you need now." Meanwhile, my classmates would laugh at me as though I were the dumbest person in the world. Even the beatings from my parents weren't particularly "hard" in a physical sense.  
+It struck me when my father remarked during my middle school years, "I noticed you're not as outgoing as you were at 10." I found myself wondering, "How did I become a person like this?"  
+Today, I still ask myself that same question again and again:"What did I do wrong? How could she do this? Am I trying my best? How did I became a person like this?"
+
+### work
+
+TUIS is not a prestigious school, but it holds special meaning for me—after all, when you spend seven years in the same place and anticipate spending two or three more, you naturally develop a connection with it. While I don't particularly embrace the Japanese mindset, I must acknowledge that "Without the Japanese approach to research, I could never have become a doctoral student."  
+I aspired to be a "hacker," a "scientist," specializing in phishing detection---despite my mediocre grades. My former Japanese professor, though strict and uncompromising, was kind enough to allow me to pursue research while questioning my abilities. I excelled in research, performing significantly better than my academic grades would suggest.  
+Now I'm enrolled in a doctoral program under the guidance of a new, easygoing Korean professor, focusing on Computer Vision, AI, and Vision Transformers. I genuinely enjoy my current work: reviewing papers daily, mentoring junior students, and pioneering work that hasn't been done before. I truly believe I'm building a new life---just without her by my side.
+
+
+
+### why English?
+
+I've always preferred communicating with locals in a different language---this way, harsh words never feel as offensive as they might in my native tongue, which helps given my struggles with emotional control.  
+I genuinely enjoy learning English—it's one area where I've outperformed most of my peers. From middle school to the present day, I can confidently say I've made more progress than many international students and Japanese locals.  
+Moreover, I need English for practical reasons: all the papers, theses, documentation, and GitHub projects are written in English, not to mention communication with my foreign friends.  
+Lastly, I still need to improve my English—throughout these years, I've merely used the language without studying it systematically, especially when it comes to writing. As a Chinese person, I appreciate the beauty of Chinese/Japanese characters, while also taking pride in my growing ability to recognize beauty in other languages.  
+
+![yoko](/assets/img/whoami/yokosuka.png){: width="972" height="589" .w-75}  
